    Closes: #672774, #798064.

  [ Helmut Grohne ]
  * Fix some issues with stage 1.  Closes: #797831.

  [ Adam Conrad ]
  * debian/patches/arm/local-arm-futex.diff: Lie about the minimum kernel
    support for futex_atomic_cmpxchg_inatomic to restore the  previous state
    and fix the pulsesink (and others) regression on ARM (closes: #788799)

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 29 Aug 2015 00:43:44 +0200

glibc (2.21-0experimental1) experimental; urgency=medium

  [ Samuel Thibault ]
  * patches/hurd-i386/cvs-libpthread.diff: Update from upstream.
  * patches/hurd-i386/cvs-libpthread-dlopen.diff: Merged.
  * patches/hurd-i386/cvs-libpthread-libc-lockP2.diff: Merged.
  * patches/hurd-i386/cvs-bind_umask.diff: Merged.
  * patches/hurd-i386/cvs-fork_ss_hang.diff: Merged.
  * patches/hurd-i386/cvs-munmap-0.diff: Merged.
  * patches/hurd-i386/cvs-static-dlopen.diff: Merged.
  * patches/hurd-i386/cvs-tcbhead_t.diff: Merged.
  * patches/hurd-i386/cvs-libpthread_versions.diff: Rebased.
  * patches/hurd-i386/local-disable-tst-xmmymm.diff: Dropped.
  * patches/hurd-i386/local-hurdsig-global-dispositions-version.diff: Rebased.
  * patches/hurd-i386/submitted-exec_filename.diff: Rebased.
  * patches/hurd-i386/submitted-net.diff: Rebased.
  * patches/hurd-i386/tg-EIEIO-fr.diff: Rebased.
  * patches/hurd-i386/tg-af_local_strlen.diff: Rebased.
  * patches/hurd-i386/tg-chflags.diff: Rebased.
  * patches/hurd-i386/tg-tls-threadvar.diff: Update.
  * patches/hurd-i386/tg-tls.diff: Rebased.
  * patches/hurd-i386/tg-tls_thread_leak.diff: Rebased.
  * patches/hurd-i386/unsubmitted-NO_HIDDEN.diff: Rebased.
  * patches/hurd-i386/tg-no-hp-timing.diff: Update.
  * patches/series: Re-enable all hurd patches.
  * patches/hurd-i386/libpthread-versions.diff: New patch, updates to new
    version engine.
  * patches/hurd-i386/cvs-revert-gnu-gnu-cleanup.diff: New patch, reverts
    cleanup of the gnu-gnu hack.
  * patches/hurd-i386/libpthread_pthread_types.diff: New patch, fixes