@@ -43,7 +43,7 @@ alpha/submitted-dl-support.diff
 alpha/submitted-rtld-fPIC.diff
 alpha/local-string-functions.diff
 
-amd64/local-blacklist-on-TSX-Haswell.diff
+amd64/local-blacklist-for-Intel-TSX.diff
 
 arm/local-ioperm.diff
 arm/local-sigaction.diff
