@@ -79,6 +79,11 @@ glibc (2.21-0experimental2) UNRELEASED; urgency=medium
     support for futex_atomic_cmpxchg_inatomic to restore the  previous state
     and fix the pulsesink (and others) regression on ARM (closes: #788799)
 
+  [ Henrique de Moraes Holschuh ]
+  * Replace patches/amd64/local-blacklist-on-TSX-Haswell.diff by 
+    local-blacklist-for-Intel-TSX.diff also blacklisting some Broadwell
+    models.  Closes: #800574.
+
  -- Aurelien Jarno <aurel32@debian.org>  Sat, 29 Aug 2015 00:43:44 +0200
 
 glibc (2.21-0experimental1) experimental; urgency=medium
